# convert_bim_to_pcd

./: README.md  config.json  convert_ifc_to_las.py  fbx_exporter.py  pyproject.toml  requirements.txt  run.bat  run.sh  shading_fx.py  texture_manager.py  uv_mapping.py  webviewer.py
templates/: viewer.html
textures/: manifest.json
